<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_view_popup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/popupBackgroundButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:alpha="0.5"
        android:background="@color/black" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:clickable="true"
            android:src="?attr/popupMenuBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:padding="50dp">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/product_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/enter_item_name"
                android:hint="@string/enter_item_name"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:visibility="gone" />

            <Button
                android:id="@+id/exp_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_suggestion"
                android:text="@string/suggestion"
                android:layout_marginTop="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/recipe_image"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/recipe_image"
                    android:scaleType="fitXY" />
                <!--                    android:src="https://spoonacular.com/recipeImages/575469-312x231.jpg"-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="20dp">

                    <TextView
                        android:id="@+id/recipe_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:maxWidth="200dp"
                        android:text="text123" />

                    <Button
                        android:id="@+id/recipe_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/show_recipe" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:padding="0dp">

            <Button
                android:id="@+id/deleteItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/red"
                android:text="@string/delete"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/blue"
                android:text="@string/edit" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/closePopUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/close"
                    android:textColor="@color/green_app_darker"
                    tools:ignore="ButtonStyle" />

                <ImageButton
                    android:id="@+id/share"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="15dp"
                    android:backgroundTint="#4CAF50"
                    android:scaleType="fitCenter"
                    android:tint="#FFFFFF"
                    app:srcCompat="@drawable/ic_share" />

            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
