<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_format_list_bulleted_24dp"
        android:title="@string/title_list" />

</menu>
